web/book/tests/examples/snapshots/examples__book__transforms__sort__examples__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nsort {-age}\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age DESC

