web/book/tests/examples/snapshots/examples__book__transforms__sort__examples__2.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nsort {age, -tenure, +salary}\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age,
  tenure DESC,
  salary

